--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
   <input type="checkbox" id="light">
   <span class="slider round"></span>
 </label>
-<script src="../socket.io/socket.io.js"></script>
+<script src="https://light-switch-dc.herokuapp.com:13154/socket.io/socket.io.js"></script>
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script> include socket.io client side script -->
 <script>
 var socket = io.connect('https://light-switch-dc.herokuapp.com:13154'); //load socket.io-client and connect to the host that serves the page
