--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
       h1 {
         font-size: 66px;
       }
+      p {
+        font-size: 60px;
+      }
       /* The switch - the box around the slider */
     .switch {
       position: relative;
@@ -76,26 +79,49 @@
     </style>
   </head>
 <body>
-<h1>Control my LED light</h1>
+<h1>Turn Me On</h1>
 <!-- <p><input type="checkbox" id="light"></p> -->
-<label class="switch">
-  <input type="checkbox" id="light">
-  <span class="slider round"></span>
-</label>
-<script src="https://light-switch-dc.herokuapp.com:13154/socket.io/socket.io.js"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script> include socket.io client side script -->
+<div>
+  <p>light</p>
+  <label class="switch"> 
+    <input type="checkbox" id="light">
+    <span class="slider round"></span>
+  </label>
+</div>
+
+<div>
+  <p>audio</p>
+  <label class="switch"> 
+    <input type="checkbox" id="audio">
+    <span class="slider round"></span>
+  </label>
+</div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script> <!-- include socket.io client side script -->
 <script>
-// var socket = io.connect('https://light-switch-dc.herokuapp.com:13154'); //load socket.io-client and connect to the host that serves the page
-var socket = io();
+var socket = io(); //load socket.io-client and connect to the host that serves the page
 window.addEventListener("load", function(){ //when page loads
   var lightbox = document.getElementById("light");
   lightbox.addEventListener("change", function() { //add event listener for when checkbox changes
     socket.emit("light", Number(this.checked)); //send button status to server (as 1 or 0)
   });
+
+  var audiobox = document.getElementById("audio");
+  audiobox.addEventListener("change", function() { //add event listener for when checkbox changes
+    socket.emit("audio", Number(this.checked)); //send button status to server (as 1 or 0)
+  });
+
+
 });
 socket.on('light', function (data) { //get button status from client
   document.getElementById("light").checked = data; //change checkbox according to push button on Raspberry Pi
   socket.emit("light", data); //send push button status to back to server
+});
+
+socket.on('audio', function (data) { //get button status from client
+  console.log('audio', data);
+  document.getElementById("audio").checked = data; //change checkbox according to push button on Raspberry Pi
+  socket.emit("audio", data); //send push button status to back to server
 });
 </script>
 </html>
